<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.asc1.tictactoe.TwoPlayerGameLocal"
    android:background="#ffffd434"
    >

    <TextView
        android:text="@string/player_turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:id="@+id/playerturn"
        android:textColor="#ffffffff"
        />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton1"
        android:text="@string/spot1"
        android:height="200dp"
        android:textSize="60dp"
        android:layout_above="@+id/imageButton4"
        android:layout_toLeftOf="@+id/playerturn"
        android:layout_toStartOf="@+id/playerturn"
        android:width="175dp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton2"
        android:height="200dp"
        android:text="@string/spot2"
        android:layout_alignTop="@+id/imageButton1"
        android:layout_alignLeft="@+id/imageButton5"
        android:layout_alignStart="@+id/imageButton5"
        android:textSize="60dp"
        android:width="175dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton3"
        android:layout_alignTop="@+id/imageButton2"
        android:layout_toRightOf="@+id/playerturn"
        android:layout_toEndOf="@+id/playerturn"
        android:height="200dp"
        android:text="@string/spot3"
        android:textSize="60dp"
        android:width="175dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton4"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/playerturn"
        android:height="200dp"
        android:text="@string/spot4"
        android:textSize="60dp"
        android:width="175dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton5"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:height="200dp"
        android:width="175dp"
        android:text="@string/spot5"
        android:textSize="60dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton6"
        android:layout_alignTop="@+id/imageButton5"
        android:layout_alignLeft="@+id/imageButton3"
        android:layout_alignStart="@+id/imageButton3"
        android:height="200dp"
        android:width="175dp"
        android:text="@string/spot6"
        android:textSize="60dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton7"
        android:height="200dp"
        android:width="175dp"
        android:text="@string/spot7"
        android:textSize="60dp"
        android:layout_below="@+id/imageButton4"
        android:layout_toLeftOf="@+id/playerturn"
        android:layout_toStartOf="@+id/playerturn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton8"
        android:height="200dp"
        android:width="175dp"
        android:text="@string/spot8"
        android:textSize="60dp"
        android:layout_below="@+id/imageButton5"
        android:layout_alignLeft="@+id/imageButton5"
        android:layout_alignStart="@+id/imageButton5" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton9"
        android:height="200dp"
        android:width="175dp"
        android:text="@string/spot9"
        android:textSize="60dp"
        android:layout_below="@+id/imageButton6"
        android:layout_alignLeft="@+id/imageButton6"
        android:layout_alignStart="@+id/imageButton6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Game"
        android:id="@+id/reset"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/imageButton8"
        android:layout_alignEnd="@+id/imageButton8" />


</RelativeLayout>
