<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainMenu"
    android:background="#ffffd434">

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/appName"
        android:textColor="#ff394dff"
        android:textSize="30dp" />

    <Button
        android:text="@string/one_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/one_player"
        android:layout_above="@+id/two_player_loc"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two_player_local"
        android:id="@+id/two_player_loc"
        android:layout_marginBottom="34dp"
        android:layout_above="@+id/two_player_online"
        android:layout_alignLeft="@+id/appName"
        android:layout_alignStart="@+id/appName" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two_player_online"
        android:id="@+id/two_player_online"
        android:layout_above="@+id/settings_options"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Settings"
        android:id="@+id/settings_options"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="130dp" />
</RelativeLayout>
